generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id           Int       @id @default(autoincrement())
  username     String    @unique
  email        String    @unique
  passwordHash String
  createdAt    DateTime  @default(now())
  updatedAt    DateTime  @updatedAt
  expenses     Expense[]
  reports      Report[]
}

model Category {
  id       Int       @id @default(autoincrement())
  name     String    @unique
  description String?
  expenses Expense[]
}

model Expense {
  id          Int       @id @default(autoincrement())
  userId      Int
  categoryId  Int
  title       String
  amount      Float
  frequency   Int
  isRecurring Boolean
  total       Float
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  user     User     @relation(fields: [userId], references: [id])
  category Category @relation(fields: [categoryId], references: [id])
}

model Report {
  id        Int      @id @default(autoincrement())
  userId    Int
  startDate DateTime
  endDate   DateTime
  summary   String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user User @relation(fields: [userId], references: [id])
}
